CMS/Plugins/Drupal/7.x/README.md
## Модуль интеграции с CMS Drupal 7.x (с корзиной Commerce)

Данный модуль обеспечивает взаимодействие между интернет-магазином на базе CMS Drupal версии 7.x и сервисом платежей [ХуткiГрош](https://hutkigrosh.by)
* Модуль интеграции для версии [Drupal 8.x](https://github.com/esasby/hgrosh/blob/master/CMS/Plugins/Drupal/8.x)
  
### Инструкция по установке:
1. Создайте резервную копию вашего магазина и базы данных
2. Загрузите архив с модулем [drupal7_commerce_hutkigrosh.zip](https://github.com/esasby/hgrosh/blob/master/CMS/Plugins/Drupal/7.x/drupal7_commerce_hutkigrosh.zip) и распакуйте его
3. Скопируйте получившуюся папку _commerce_hutkigrosh_ на сервер в каталог 
```<DRUPAL_HOME>/sites/all/modules```
4. Включите модуль _Hutkigrosh payment_ через меню управления модулями 
```Home > Administration > Site settings > Advanced settings > Modules```
5. Перейдите в настройки модуля и заполните параметры
```Home > Administration > Store settings > Advanced store settings > Payment methods```
    * Уникальный идентификатор услуги ЕРИП – ID услуги в ЕРИП
    * Логин – логин в системе ХуткiГрош.
    * Пароль – пароль в системе ХуткiГрош.
    * Sms оповещение - включить информирование клиента по смс при успешном выставлении счета (выполняется шлюзом Хуткiгрош)
    * Email оповещение - включить информирование клиента по email при успешном выставлении счета (выполняется шлюзом Хуткiгрош)
    * Режим песочницы - перевод модуля в тестовый режим работы
    * Название способа оплаты - как данный способ оплаты будет отображаться клиенту при оформлении заказа
    * Описание способа оплаты для покупателя - подробное описание способа оплаты (будет отображатся клиенту при оформлении заказа)    
    * Текст успешного выставления счета - текст, который будет показан клиенту в случае успешного выставления счета. Может содержать html. В переменной @order_number будет номер заказа           
6. Сохраните изменения.

### Внимание!
Для автоматического обновления статуса заказа (после оплаты клиентом выставленного в ЕРИП счета) необходимо сообщить в службу технической поддержки сервиса «Хуткi Грош» адрес обработчика:
```
http://mydomen.my/?q=commerce_hutkigrosh/notify
```

### Тестовые данные
Для настрой оплаты в тестовом режиме:
 * воспользуйтесь данными для подключения к тестовой системе, полученными при регистрации в ХуткiГрош
 * включите в настройках модуля режим "Песочницы" 
 * для эмуляции оплаты клиентом выставленного счета воспльзуйтесь личным кабинетом [тестовой системы](https://trial.hgrosh.by) (меню _Тест оплаты ЕРИП_)

_Разработано и протестировано с Drupal v.7.56 + Commerce Kickstart (commerce_kickstart-7.x-2.51)_


