CMS/Plugins/Drupal/8.x/README.md
## Модуль интеграции с CMS Drupal 8.x (с корзиной Commerce 2)

Данный модуль обеспечивает взаимодействие между интернет-магазином на базе CMS Drupal версии 8.x и сервисом платежей [ХуткiГрош](https://hutkigrosh.by)
* Модуль интеграции для версии [Drupal 7.x](https://github.com/esasby/hgrosh/blob/master/CMS/Plugins/Drupal/7.x)
  
### Инструкция по установке:
1. Создайте резервную копию вашего магазина и базы данных
2. Загрузите архив с модулем [drupal8_commerce_hutkigrosh.zip](https://github.com/esasby/hgrosh/blob/master/CMS/Plugins/Drupal/8.x/drupal8_commerce_hutkigrosh.zip) и распакуйте его
3. Скопируйте получившуюся папку _commerce_hutkigrosh_ на сервер в каталог 
```<DRUPAL_HOME>/modules```
4. Включите модуль _Hutkigrosh payment_ через меню управления модулями 
```admin/modules/install```
5. Добавьте новый платежный шлюз и заполните обязательные параметры
```admin/commerce/config/payment-gateways/add```
    * Name - как данный способ оплаты будет отображаться клиенту при оформлении заказа
    * Машинное имя - hutkigrosh
    * Плагин - выбрать ```Hutkigrosh (ERIP gate)```
    * Режим - перевод шлюза в тестовый или реальный режим работы
    * Уникальный идентификатор услуги ЕРИП – ID услуги в ЕРИП
    * Логин – логин в системе ХуткiГрош.
    * Пароль – пароль в системе ХуткiГрош.
    * Sms оповещение - включить информирование клиента по смс при успешном выставлении счета (выполняется шлюзом Хуткiгрош)
    * Email оповещение - включить информирование клиента по email при успешном выставлении счета (выполняется шлюзом Хуткiгрош)
    * Описание способа оплаты для покупателя - подробное описание способа оплаты (будет отображатся клиенту при оформлении заказа) **Временно не работает!!!**    
    * Текст успешного выставления счета - текст, который будет показан клиенту в случае успешного выставления счета. Может содержать html. В переменной @order_number будет номер заказа           
6. Сохраните изменения.

### Внимание!
Для автоматического обновления статуса заказа (после оплаты клиентом выставленного в ЕРИП счета) необходимо сообщить в службу технической поддержки сервиса «Хуткi Грош» адрес обработчика:
```
http://mydomen.my/commerce_hutkigrosh/notify
```

### Тестовые данные
Для настрой оплаты в тестовом режиме:
 * воспользуйтесь данными для подключения к тестовой системе, полученными при регистрации в ХуткiГрош
 * включите в настройках модуля режим "Тест" 
 * для эмуляции оплаты клиентом выставленного счета воспльзуйтесь личным кабинетом [тестовой системы](https://trial.hgrosh.by) (меню _Тест оплаты ЕРИП_)

_Разработано и протестировано с Drupal v.8.4.2 + Commerce 2 v.8.x-2.3_

Список известных недоработок:
1. Клиенту не отображается подробное описание способа оплаты, указанное в настройках модуля. См. https://drupal.stackexchange.com/questions/254918/commerce-2-payment-plugin-description-text
2. После выставления счета в ЕРИП статус заказа автоматиески меняется на `Completed`, хотя должен оставаться в `Pending`
до момента оплаты клиентом счета. Хотя в самом заказе платеж меняет свои статусы корректно: будет находится в статусе `hg_pending` и изменится на `hg_completed` только
после оплаты счета в ЕРИП. см. https://drupal.stackexchange.com/questions/254909/commerce-2-order-workflow-for-payment-gateway
3. Необходимо настроить сервер локализации для подключения к https://localize.drupal.org/
